# tree_menu

./: .dockerignore  .env.example  Dockerfile  README.md  db.json  docker-compose.yml  pyproject.toml
conf/: mime.types  nginx.conf
menu_app/: admin.py  models.py  tests.py  urls.py  views.py
menu_app/migrations/: 0001_initial.py
menu_app/static/menu_app/css/: main.css
menu_app/templates/menu_app/: home.html  tree_menu.html
menu_app/templatetags/: menu_tags.py
templates/menu_app/: base.html
tree_menu/: __init__.py  settings.py  urls.py
